--- a/1-HTML-Basics/Challenges/Divs-Challenge.html
+++ b/1-HTML-Basics/Challenges/Divs-Challenge.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Divs</title>
+    <title>Divs Challenge</title>
 </head>
 <body>
     <h1>Div Tags</h1>
@@ -19,13 +19,18 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sagittis volutpat dui, nec aliquet nulla viverra ac. Praesent malesuada porta hendrerit. Suspendisse non dui quis turpis ultrices ultrices tincidunt ultrices felis. Aliquam vitae pulvinar augue, vitae ornare sem. Etiam luctus purus dolor, varius varius augue rutrum condimentum. Vestibulum maximus lorem vitae lacinia consequat. Quisque luctus odio ut ultrices suscipit. Integer pulvinar faucibus pellentesque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam eu sollicitudin ipsum. Praesent semper, ipsum eu tristique tempor, eros diam mollis libero, et commodo est quam vitae orci. Suspendisse eu ullamcorper nisi. Curabitur facilisis lacinia lacus. Pellentesque mattis odio nulla.</p>
     </div>
 
-    <div style="border: 1px solid black;">
+    <div style="border: 1px solid blue;">
         <h2>Div Two</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sagittis volutpat dui, nec aliquet nulla viverra ac. Praesent malesuada porta hendrerit. Suspendisse non dui quis turpis ultrices ultrices tincidunt ultrices felis. Aliquam vitae pulvinar augue, vitae ornare sem. Etiam luctus purus dolor, varius varius augue rutrum condimentum. Vestibulum maximus lorem vitae lacinia consequat. Quisque luctus odio ut ultrices suscipit. Integer pulvinar faucibus pellentesque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam eu sollicitudin ipsum. Praesent semper, ipsum eu tristique tempor, eros diam mollis libero, et commodo est quam vitae orci. Suspendisse eu ullamcorper nisi. Curabitur facilisis lacinia lacus. Pellentesque mattis odio nulla.</p>
     </div>
 
-    <div style="background-color: gray;">
+    <div style="background-color: yellow;">
         <h2>Div Three</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sagittis volutpat dui, nec aliquet nulla viverra ac. Praesent malesuada porta hendrerit. Suspendisse non dui quis turpis ultrices ultrices tincidunt ultrices felis. Aliquam vitae pulvinar augue, vitae ornare sem. Etiam luctus purus dolor, varius varius augue rutrum condimentum. Vestibulum maximus lorem vitae lacinia consequat. Quisque luctus odio ut ultrices suscipit. Integer pulvinar faucibus pellentesque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam eu sollicitudin ipsum. Praesent semper, ipsum eu tristique tempor, eros diam mollis libero, et commodo est quam vitae orci. Suspendisse eu ullamcorper nisi. Curabitur facilisis lacinia lacus. Pellentesque mattis odio nulla.</p>
+    </div>
+
+    <div style="text-align: justify; font-family: Arial, Helvetica, sans-serif; background-color: red;">
+        <h2>Div Four</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sagittis volutpat dui, nec aliquet nulla viverra ac. Praesent malesuada porta hendrerit. Suspendisse non dui quis turpis ultrices ultrices tincidunt ultrices felis. Aliquam vitae pulvinar augue, vitae ornare sem. Etiam luctus purus dolor, varius varius augue rutrum condimentum. Vestibulum maximus lorem vitae lacinia consequat. Quisque luctus odio ut ultrices suscipit. Integer pulvinar faucibus pellentesque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam eu sollicitudin ipsum. Praesent semper, ipsum eu tristique tempor, eros diam mollis libero, et commodo est quam vitae orci. Suspendisse eu ullamcorper nisi. Curabitur facilisis lacinia lacus. Pellentesque mattis odio nulla.</p>
     </div>
 </body>
