--- a/1-HTML-Basics/Challenges/Forms-Challenge.html
+++ b/1-HTML-Basics/Challenges/Forms-Challenge.html
@@ -110,7 +110,7 @@
                 </p>
                 <p>
                     <label for="instructions">Delivery Instructions:</label>
-                    <textarea name="instructions" id="instructions"></textarea>
+                    <textarea name="instructions" id="instructions" cols="30" rows="10"></textarea>
                 </p>
                 <p>
                     <button type="submit">Submit Order</button>
