--- a/1-HTML-Basics/Challenges/Tables-Challenge.html
+++ b/1-HTML-Basics/Challenges/Tables-Challenge.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tables</title>
+    <title>Tables Challenge</title>
 </head>
 <body>
     <h1>Basic Tables</h1>
@@ -13,16 +13,19 @@
             <th>Name</th>
             <th>Occupation</th>
             <th>Years of Experience</th>
+            <th>Organization</th>
         </tr>
         <tr>
             <td>Auri Rahimzadeh</td>
             <td>Software Architect</td>
             <td>20</td>
+            <td>Microsoft</td>
         </tr>
         <tr>
             <td>Jenn Aikens</td>
             <td>Management</td>
             <td>15</td>
+            <td>Apple</td>
         </tr>
     </table>
 
@@ -31,21 +34,27 @@
     <br />
 
     <h1>Table with Simple Border</h1>
-    <table border="2">
+    <table border="5">
         <tr>
             <th>Show</th>
             <th>Genre</th>
             <th>Rating</th>
+            <th>Seen?</th>
+            <th>Last Seen</th>
         </tr>
         <tr>
             <td>The Walking Dead</td>
             <td>Horror/Drama</td>
             <td>R</td>
+            <td>No</td>
+            <td>N/A</td>
         </tr>
         <tr>
             <td>Breaking Bad</td>
             <td>Action/Suspense</td>
             <td>R</td>
+            <td>Yes</td>
+            <td>Spring 2020</td>
         </tr>
     </table>
 </body>
