Articles and Headers Completed

--- a/1-HTML-Basics/Challenges/Sections-Challenge.html
+++ b/1-HTML-Basics/Challenges/Sections-Challenge.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sections</title>
+    <title>Sections Challenge</title>
 </head>
 <body>
     <h1>BRONZE</h1>
@@ -15,8 +15,8 @@
         </p>
     </section>
 
-    <h1>SILVER</h1>
-    <section style="width: 50%; background-color: lightgreen;">
+    <h1 style="text-align: center;">SILVER</h1>
+    <section style="width: 50%; background-color: silver; text-align: center; margin-left: 25%;">
         <h3>Welcome to the Donut Store</h3>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque suscipit nisi diam, at porta risus auctor a. Nunc efficitur purus eu arcu vestibulum, sit amet iaculis augue cursus. Vestibulum at.
