--- a/2-CSS-Basics/Challenges/Backgrouns-Challenge.html
+++ b/2-CSS-Basics/Challenges/Backgrouns-Challenge.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Backgrounds</title>
+    <title>CSS Backgrounds Challenge</title>
     <!--1-->
-    <link rel="stylesheet" href="05-backgrounds.css" type="text/css">
+    <link rel="stylesheet" href="Background-Challenge.css" type="text/css">
 </head>
 <body>
     <div class="wrapper">
