--- a/1-HTML-Basics/Challenges/IFrame-Challenge.html
+++ b/1-HTML-Basics/Challenges/IFrame-Challenge.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IFrame</title>
+    <title>IFrame Challenge</title>
 </head>
 <body>
     <h1>IFrames</h1>
     <p>
         An iframe allows us to embed HTML documents inside HTML documents!
     </p>
-    <iframe src="https://www.youtube.com/embed/owsfdh4gxyc" frameborder="0" width="560" height="315" allowfullscreen></iframe>
+    <iframe width="20%" height="100%" src="https://www.youtube.com/embed/ZnuwB35GYMY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
