--- a/2-CSS-Basics/Challenges/Classes-Challenge.html
+++ b/2-CSS-Basics/Challenges/Classes-Challenge.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Classes</title>
-    <link rel="stylesheet" href="01-classes.css" type="text/css">
+    <title>CSS Classes Challenge</title>
+    <link rel="stylesheet" href="Classes-Challenge.css" type="text/css">
 </head>
 <body>
     <h1>HEY</h1>
