--- a/2-CSS-Basics/Challenges/Ids-Challenge.html
+++ b/2-CSS-Basics/Challenges/Ids-Challenge.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS ids</title>
-    <link rel="stylesheet" href="02-ids.css" type="text/css">
+    <title>CSS Ids Challenge</title>
+    <link rel="stylesheet" href="Ids-Challenge.css" type="text/css">
 </head>
 <body>
     <h1>CSS ids</h1>
     <p>An ID is a UNIQUE identifier</p>
     <div>
-        <h3>id notes</h3>
-        <ul>
+        <h3 id="list-header">id notes</h3>
+        <ul id="list">
             <li>start with a pount - #</li>
             <li>uses: header or an about section</li>
             <li>Should only be used once per page - they are unique! Important with JavaScript later on.</li>
