--- a/2-CSS-Basics/Challenges/Setup-Challenge.html
+++ b/2-CSS-Basics/Challenges/Setup-Challenge.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Notes</title>
-    <link rel="stylesheet" href="00-setup.css" type="text/css">
+    <title>CSS Setup Challenge</title>
+    <link rel="stylesheet" href="Setup-Challenge.css" type="text/css">
 </head>
 <body>
     <h1>CSS Notes</h1>
@@ -20,7 +20,7 @@
             <li><b>Value:</b> numbers, colors, urls - values that we assign. </li>
         </ol>
         <p>Here's a photo to illustrate these items:</p>
-        <img src="../assets/anatomy_css_rule.gif" id="css-photo">
+        <img src="../../assets/anatomy_css_rule.gif" id="css-photo">
     </div>
 </body>
 </html>
